# AIBOM-Inspector

./: .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml  pages.yml  release.yml
benchmark/: README.md  __init__.py  evaluate.py  repos.yaml
benchmark/ground_truth/: mcp-server.json  negative-web.json  notebook.json  py-agent.json  ts-rag.json  vulnerable-ai-app.json
benchmark/ground_truth_public/: flask.json  openai-quickstart-python.json
benchmark/reports/: external-latest.json  external-latest.md  latest.json  latest.md
benchmark/repos/mcp-server/: requirements.txt  server.py
benchmark/repos/negative-web/: requirements.txt
benchmark/repos/notebook/: requirements.txt  train.ipynb
benchmark/repos/py-agent/: app.py  requirements.txt
benchmark/repos/ts-rag/: package.json  rag.ts
benchmark/schemas/: ground-truth.schema.json
docs/: architecture.md  benchmark-methodology.md  blackhat-implementation-plan.md  contributing-detectors.md  detection-methodology.md  limitations.md
src/aibom/: __init__.py  cli.py  config.py  graph.py  inventory.py  service.py  spdx.py
src/aibom/collectors/: __init__.py  ast_python.py  base.py  dependencies.py  js_resolve.py  repo.py
src/aibom/detectors/: __init__.py  base.py  registry.py  result.py
src/aibom/detectors/python/: __init__.py  anthropic.py  common.py  huggingface.py  openai.py  parser.py  prompt_flow.py  value_resolver.py
src/aibom/export/: __init__.py  cyclonedx.py  sarif.py
src/aibom/models/: __init__.py  analysis.py  entities.py  evidence.py  findings.py  signals.py
src/aibom/report/: __init__.py  html.py
src/aibom/resolvers/: __init__.py  huggingface.py
src/aibom/risk/: __init__.py  engine.py  rules.py  scoring.py
src/aibom/server/: __init__.py  app.py  clone.py
src/aibom/vuln/: __init__.py  osv.py
tests/: conftest.py  test_ast_python.py  test_benchmark.py  test_cli.py  test_clone.py  test_config.py  test_cyclonedx.py  test_cyclonedx_schema.py  test_dependencies.py  test_entities.py  test_graph.py  test_hf_resolver.py  test_js_mcp_detection.py  test_js_resolve.py  test_osv.py  test_precision.py  test_prompt_flow.py  test_python_ast_detectors.py  test_repo_collector.py  test_risk_rules.py  test_sarif.py  test_scan_stats.py  test_scoring_report.py  test_server.py  test_surface_rules.py
tests/fixtures/vulnerable-ai-app/: agent.py  app.py  requirements.txt
tests/fixtures/vulnerable-ai-app/prompts/: agent_system.prompt
tests/fixtures/vulnerable-ai-app/weights/: classifier.pkl
web/: index.html
