[project]
name = "aibom"
version = "0.1.0"
description = "AIBOM Inspector — discover, inventory, and analyze AI supply chains (the 'Dependency-Track for AI')."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "d01ki" }]
keywords = ["aibom", "sbom", "ai-security", "supply-chain", "cyclonedx", "mlbom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "cyclonedx-python-lib[validation]>=8",
]

[project.scripts]
aibom = "aibom.cli:app"

[project.urls]
Homepage = "https://github.com/d01ki/AIBOM-Inspector"
Repository = "https://github.com/d01ki/AIBOM-Inspector"
Issues = "https://github.com/d01ki/AIBOM-Inspector/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aibom"]

# Ship the web UI inside the wheel (as aibom/web) so `pip install aibom[server]`
# + `aibom serve` serves the UI, not just the API.
[tool.hatch.build.targets.wheel.force-include]
"web" = "aibom/web"

[tool.ruff]
line-length = 100
target-version = "py310"
# Labeled scan targets are fixtures, not tool code — deliberately "imperfect".
extend-exclude = ["benchmark/repos", "tests/fixtures"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/aibom"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tomllib", "tomli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/aibom"]
